--- a/index.html
+++ b/index.html
@@ -3435,72 +3435,6 @@
             // Update the switch state visually
             document.getElementById('darkModeToggleSwitch').checked = !isLightMode; // Checkbox is ON for Dark Mode, OFF for Light Mode
         }
-<!-- Final corrected SkillNeast index.html with working Firebase + global function exposure --><!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkillNeast</title>
-</head>
-<body>
-  <!-- Your site layout -->
-  <div class="batch-list"></div>  <!-- Firebase Integration Script - FIXED -->  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyChwpbFb6M4HtG6zwjg0AXh7Lz9KjnrGZk",
-      authDomain: "adminneast.firebaseapp.com",
-      databaseURL: "https://adminneast-default-rtdb.firebaseio.com",
-      projectId: "adminneast",
-      storageBucket: "adminneast.appspot.com",
-      messagingSenderId: "883877553418",
-      appId: "1:883877553418:web:84ce8200f4b471bfffc6f3",
-      measurementId: "G-PCH99BDF1S"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    const batchListEl = document.querySelector(".batch-list");
-
-    function showNewBatchesView() {
-      const catRef = ref(db, 'categories');
-      onValue(catRef, snapshot => {
-        const data = snapshot.val();
-        if (!data) {
-          batchListEl.innerHTML = '<p style="text-align:center;color:gray">No batches found.</p>';
-          return;
-        }
-
-        batchListEl.innerHTML = '';
-        Object.values(data).forEach(category => {
-          if (!category.batches) return;
-          Object.values(category.batches).forEach(batch => {
-            const div = document.createElement('div');
-            div.className = 'batch-card';
-            div.innerHTML = `
-              <div class="batch-card-header">
-                <div>${batch.title}</div>
-                <div class="icons">
-                  <i class="fas fa-heart"></i>
-                  <i class="fas fa-share"></i>
-                </div>
-              </div>
-              <div class="batch-card-body">
-                <div class="batch-image-container">
-                  <img src="${batch.thumbnail}" alt="${batch.title}" />
-                </div>
-                <h3 class="batch-title">${batch.title}</h3>
-                <div class="lets-roar-button">Let's Roar <i class="fas fa-rocket"></i></div>
-              </div>`;
-            batchListEl.appendChild(div);
-          });
-        });
-      });
-    }
-
-    // Auto load & global expose
-    showNewBatchesView();
-    window.showNewBatchesView = showNewBatchesView;
-  </script></body>
+    </script>
+</body>
 </html>
