--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         }
         .top-navbar .app-logo {
             display: flex;
-            flex-direction: column; /* To stack logo and tagline */
+            flex-direction: row; /* Changed to row for logo and title on same line */
             align-items: center;
             padding: 8px 18px; /* Adjusted padding */
             background-color: var(--primary-dark); /* Changed to dark background */
@@ -154,17 +154,19 @@
             box-shadow: var(--shadow-light);
             cursor: pointer;
             transition: background-color 0.3s ease, box-shadow 0.3s ease;
-            position: relative; /* Needed for absolute positioning of tagline */
+            position: relative; /* Needed for tagline positioning */
             overflow: hidden; /* For tagline animation */
             flex-grow: 1; /* Allow it to take available space */
             margin: 0 10px; /* Space from icons */
+            justify-content: flex-start; /* Align content to the start */
         }
         .top-navbar .app-logo:hover {
             background-color: #2F4156; /* Darker on hover */
         }
         .top-navbar .app-logo img#skillNeastLogo {
             height: 34px; /* Adjusted size */
-            margin-bottom: 2px; /* Smaller space below logo */
+            margin-right: 8px; /* Space between logo and text */
+            margin-bottom: 0; /* Remove bottom margin */
             transition: transform 1s linear; /* Ensure smooth rotation */
         }
         .top-navbar .app-logo img#skillNeastLogo.rotating {
@@ -173,6 +175,11 @@
         @keyframes rotate360 {
             from { transform: rotate(0deg); }
             to { transform: rotate(360deg); }
+        }
+        .top-navbar .app-logo .text-wrapper { /* New wrapper for title and tagline */
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; /* Align text to the start within wrapper */
         }
         .top-navbar .app-logo .main-title {
             font-family: 'Poppins', sans-serif;
@@ -185,6 +192,7 @@
             display: inline-block;
             animation: rainbowText 5s linear infinite;
             background-size: 200% 100%;
+            line-height: 1; /* Ensure tight line height */
         }
 
         @keyframes rainbowText {
@@ -197,10 +205,11 @@
             font-size: 0.65em; /* Smaller font for tagline */
             font-weight: 600;
             color: var(--text-light); /* Lighter text for tagline */
-            text-align: center;
+            text-align: left; /* Align to left */
             animation: floatUpDown 2s infinite ease-in-out; /* Floating animation */
             white-space: nowrap; /* Prevent wrapping */
             transition: color 0.3s ease;
+            line-height: 1; /* Ensure tight line height */
         }
 
         /* --- Main Content Area --- */
@@ -849,12 +858,7 @@
         }
 
         .partition {
-            height: 2px;
-            background: linear-gradient(to right, rgba(0, 173, 181, 0), var(--accent-teal), rgba(0, 173, 181, 0));
-            margin: 20px 0;
-            border-radius: 5px;
-            opacity: 0.7;
-            transition: background 0.3s ease, opacity 0.3s ease;
+            display: none; /* Hidden as per request */
         }
 
         #sections-view {
@@ -2343,8 +2347,10 @@
         <div class="menu-icon" onclick="window.openSliderMenu()"><i class="fas fa-bars"></i></div>
         <div class="app-logo" id="appLogo">
             <img src="https://via.placeholder.com/40x40/00ADB5/ffffff?text=SN" alt="SkillNeast Logo" draggable="false" id="skillNeastLogo">
-            <span class="main-title">SKILLNEAST</span>
-            <span class="tagline">Master New Skill 🚀💡</span>
+            <div class="text-wrapper"> <!-- Added text wrapper -->
+                <span class="main-title">SKILLNEAST</span>
+                <span class="tagline">Master New Skill 🚀💡</span>
+            </div>
         </div>
         <div class="telegram-icon" onclick="window.open('YOUR_TELEGRAM_GROUP_LINK', '_blank');"><i class="fab fa-telegram-plane"></i></div>
     </div>
@@ -2370,7 +2376,7 @@
             <div class="favorites-section-home-card" onclick="window.showFavoritesView()" id="favorites-section-home-card">
                 <i class="fas fa-heart fav-icon"></i>
                 <h2>My Favorite Batches</h2>
-                <p>Unlock personalized learning paths and quick access to your most cherished courses. Your journey to mastery starts here!</p>
+                <p>Explore SkillNeast! Your ultimate hub for mastering new skills with engaging courses, expert instructors, and a vibrant community. Dive into learning, track your progress, and unlock your full potential! 🌟 More exciting features coming soon! 🚀</p>
                 <span class="fav-count" id="favorites-count">0 Batches</span>
             </div>
 
@@ -2407,7 +2413,6 @@
                 <button class="back-button" onclick="window.showHomeView()"><i class="fas fa-arrow-left"></i></button>
                 <h2>Favourite Batches</h2>
             </div>
-            <!-- Removed promotional-banner -->
             <div class="batch-list" id="favorite-batches-container">
             </div>
             <p id="no-favorites-message-view" class="no-favorites-message-view" style="display: none;">You haven't favorited any batches yet. Click the heart icon on any batch to add it here!</p>
@@ -2726,7 +2731,7 @@
                 this.classList.remove('active');
             }
 
-            // These are now inside home-view, so observing them after renderCategories()
+            // Event listeners for static elements now handled in renderCategories for their re-addition
             // document.querySelectorAll('.favorites-section-home-card, .telegram-card, .surprise-button').forEach(item => {
             //     item.addEventListener('touchstart', onTouchStart);
             //     item.addEventListener('touchend', onTouchEnd);
@@ -2939,17 +2944,30 @@
             const homeView = document.getElementById('home-view');
             if (!homeView) return;
 
-            // Remove only dynamically added category items, keep static elements within home-view
+            // Remove only dynamically added category items
             Array.from(homeView.querySelectorAll('.course-category-item')).forEach(el => el.remove());
 
             const loadingMessage = document.getElementById('loadingCategoriesMessage');
             if (loadingMessage) loadingMessage.remove(); // Remove initial loading message for categories
 
+            // These elements are now part of home-view's static HTML content.
+            // We just need to ensure they are visible if home-view is active and observed for animation.
+            const favoritesSection = document.getElementById('favorites-section-home-card');
+            const telegramCard = homeView.querySelector('.telegram-card');
+            const shareButton = homeView.querySelector('.share-app-button');
+            const surpriseButton = homeView.querySelector('.surprise-button');
+
             if (Object.keys(allCategoriesData).length === 0) {
-                homeView.insertAdjacentHTML('afterbegin', '<p class="text-center text-muted col-span-full" id="noCategoriesMessage">No categories found. Please add courses via the admin panel.</p>');
+                // Only add "No categories" message if it doesn't exist and there are no categories
+                const noCategoriesMessage = document.getElementById('noCategoriesMessage');
+                if (!noCategoriesMessage) {
+                    homeView.insertAdjacentHTML('afterbegin', '<p class="text-center text-muted col-span-full" id="noCategoriesMessage">No categories found. Please add courses via the admin panel.</p>');
+                }
                 return;
             } else {
-                 if (loadingMessage) loadingMessage.remove(); // Remove loading message if categories found
+                 // Ensure noCategoriesMessage is removed if categories are found
+                 const noCategoriesMessage = document.getElementById('noCategoriesMessage');
+                 if(noCategoriesMessage) noCategoriesMessage.remove();
             }
 
             // Dynamically add category items
@@ -2975,16 +2993,9 @@
                 observer.observe(categoryItem);
             });
 
-            // Re-observe static elements in home-view to ensure they animate correctly if they weren't before
+            // Re-observe static elements in home-view to ensure they animate correctly
             document.querySelectorAll('#home-view .favorites-section-home-card, #home-view .telegram-card, #home-view .share-app-button, #home-view .surprise-button').forEach(item => {
-                // Ensure they are initially hidden-on-scroll if they haven't been observed yet
-                if (!item.classList.contains('hidden-on-scroll') && !item.classList.contains('visible-on-scroll')) {
-                    item.classList.add('hidden-on-scroll');
-                }
-                observer.observe(item);
-            });
-            // Also observe partitions if they are being added here, ensure no duplicates
-            document.querySelectorAll('#home-view .partition').forEach(item => {
+                // Only add hidden-on-scroll if it's not already observed or visible (prevents re-adding class)
                 if (!item.classList.contains('hidden-on-scroll') && !item.classList.contains('visible-on-scroll')) {
                     item.classList.add('hidden-on-scroll');
                 }
@@ -3288,7 +3299,7 @@
                     // Implement UI from Screenshot_20250613-191010.jpg (simplified to remove unnecessary elements)
                     lessonItem.innerHTML = `
                         <div class="lesson-list-item-left">
-                            <img src="https://via.placeholder.com/50x50/000000/ffffff?text=PW" alt="PW Logo" class="pw-logo" onerror="this.onerror=null;this.src='https://via.placeholder.com/50x50/000000/ffffff?text=PW';">
+                            <!-- Removed PW Logo -->
                         </div>
                         <div class="lesson-list-item-right">
                             <h3 class="lesson-list-item-title">${lecture.name}</h3>
@@ -3379,7 +3390,7 @@
                         // Re-use the simplified lesson-list-item structure from showLessonsInSectionsView
                         lessonItem.innerHTML = `
                             <div class="lesson-list-item-left">
-                                <img src="https://via.placeholder.com/50x50/000000/ffffff?text=PW" alt="PW Logo" class="pw-logo" onerror="this.onerror=null;this.src='https://via.placeholder.com/50x50/000000/ffffff?text=PW';">
+                                <!-- Removed PW Logo -->
                             </div>
                             <div class="lesson-list-item-right">
                                 <h3 class="lesson-list-item-title">${otherLecture.name}</h3>
@@ -3505,7 +3516,7 @@
 
             // Reference to Firestore collection
             const commentsCollectionRef = collection(firestore, `artifacts/${currentAppId}/public/comments/${lectureId}/userComments`);
-            const q = query(commentsCollectionRef); 
+            const q = query(commentsCollectionRef); // You can add orderBy here if needed, but Firestore needs indexes.
 
             window.unsubscribeComments = onSnapshot(q, (snapshot) => { // Assign to global
                 commentsDisplayArea.innerHTML = ''; // Clear existing comments
